--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
 	"origin": "https://github.com/CubeCoders/AMPTemplates.git",
 	"url": "https://github.com/CubeCoders/AMPTemplates",
 	"imagefile": "",
-	"prefix": "",
+	"prefix": "XHead-git",
 	"repotype": "AppTemplates"
 }
