--- a/ark-se-minconfig.json
+++ b/ark-se-minconfig.json
@@ -635,7 +635,7 @@
         }
     },
     {
-        "DisplayName": "Server Branch",
+        "DisplayName": "Server Branch 1",
         "Category": "Updates",
         "Subcategory": "Steam Downloads:download",
         "Description": "Sets the server branch to install. Update the server after switching branches",
